--- a/analysis_paper.ipynb
+++ b/analysis_paper.ipynb
@@ -38,12 +38,12 @@
    "source": [
     "### 抠图\n",
     "\n",
-    "把方正的图（数据点比较多）截屏，然后写了个程序，把里面数据点挖出来，方法很简单，就找里面红点和黄点就行了。程序如下"
+    "把方正的图（数据点比较多）截屏，然后写了个程序，把里面数据点挖出来，方法很简单，就找里面红点和黄点就行了。程序如下，相关系数确实是 0.769"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -57,6 +57,13 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "corr=0.769551551594551\n"
+     ]
     }
    ],
    "source": [
@@ -97,13 +104,17 @@
     "df = pd.DataFrame(index=df_real.index)\n",
     "df['real'] = df_real['vol']\n",
     "df['pred'] = df_pred['vol']\n",
+    "corr = df['real'].corr(df['pred'])\n",
     "\n",
     "plt.plot(df['real'], label='real')\n",
     "plt.plot(df['pred'], label='pred')\n",
     "plt.legend()\n",
     "plt.show()\n",
     "\n",
-    "df.to_pickle('ref.pkl')\n"
+    "print(f\"corr={corr}\")\n",
+    "\n",
+    "df.to_pickle('ref.pkl')\n",
+    "\n"
    ]
   },
   {
